# Meta_OpenEnv

./: .gitignore  Dockerfile  README.md  RUN_README.md  environment-infer.yml  environment-train.yml  eval.py  eval_results.json  gen_rl_diagram.py  generate_data.py  implementation_plan.md  inference.py  llm_decisions.jsonl  openenv.yaml  plot_components.py  plot_reward.py  pyproject.toml  requirements.txt  requirements_infer.txt  requirements_space.txt  requirements_train.txt  reward_design.md  server.py  test.txt  test_pretrain_validation.py  test_v2.py  train_grpo.py
agents/: __init__.py  mutator.py  role_agents.py  spreader.py  task_bank.py
data/: build_dataset.py
documents/: SPEC.md  implementation_chronoveritas_v2_updated.md  mutator.py  train_grpo.py
env/: __init__.py  actions.py  environment.py  models.py  state_manager.py
eval/: qualitative_comparison.md
graders/: base_grader.py  easy_grader.py  hard_grader.py  medium_grader.py  unified_grader.py
search/: bm25_index.py  corpus_store.py
server/: app.py
training/: __init__.py  reward_fn.py  sft_warmup.py
training_logs/: pretrain_validation.json  reward_log.csv  reward_log.json
training_logs_v2/: reward_log.csv  reward_log.json
unsloth_compiled_cache/: UnslothBCOTrainer.py  UnslothCPOTrainer.py  UnslothDPOTrainer.py  UnslothGKDTrainer.py  UnslothGRPOTrainer.py  UnslothKTOTrainer.py  UnslothNashMDTrainer.py  UnslothORPOTrainer.py  UnslothOnlineDPOTrainer.py  UnslothPPOTrainer.py  UnslothPRMTrainer.py  UnslothRLOOTrainer.py  UnslothRewardTrainer.py  UnslothSFTTrainer.py  UnslothXPOTrainer.py
(+40 files in other folders)
